# bop

./: .gitignore  CMakeLists.txt  CmakeSettings.json  build.bat  setup_vcpkg.bat  test.bat  vcpkg.json
src/: CMakeLists.txt  main.cpp  pool.h  raw_string_stream.cpp  raw_string_stream.h  raw_string_stream.inl  readme.md
src/job/: co_generator.h  co_generator.inl  co_job.h  co_job.inl  co_job_promise.cpp  co_job_promise.h  co_job_promise.inl  job.cpp  job.h  job.inl  job_queue.cpp  job_queue.h  job_queue.inl  job_system.cpp  job_system.h  job_system.inl  job_trace.cpp  job_trace.h
src/primitives/: cancellation.h
src/task/: task.h  task.inl  task_queue.cpp  task_queue.h  task_scheduler.cpp  task_scheduler.h  task_scheduler.inl  task_system.cpp  task_system.h  task_system.inl
src/tasks/: task.h
src/util/: cacheline.h  concepts.h  curry.h  describe_object.h  function.h  function.inl  function_traits.h  manual_lifetime.h  manual_lifetime.inl  overloaded.h  platform.h  scope_guard.h  scope_guard.inl  signature.h  simple_function.cpp  simple_function.h  spinlock.cpp  spinlock.h  tag.h  thread_types.h  traits.h  traits.inl  typelist.h  typelist.inl  valuelist.h  valuelist.inl
tests/: CMakeLists.txt  main.cpp  test.cpp
tests/job/: test_co_generator.cpp  test_jobsystem.cpp
tests/util/: test_function.cpp
